--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     </head>
     <body>
         <div class="game-container">
-            <h1>Jordle</h1>
+            <div class="title-container">
+                <h1>Jordle</h1>
+            </div>
+            <!-- <div class="quantity-toggle"></div> -->
+            <div class="message-container"></div>
+            <div class="tile-container"></div>
+            <div class="key-container"></div>
         </div>
-        <!-- <div class="quantity-toggle"></div> -->
-        <div class="message-container"></div>
-        <div class="tile-container"></div>
-        <div class="key-container"></div>
         
         <script src="app.js"></script>
     </body>
