added buttons to choose the length of the word

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <div class="title-container">
                 <h1>Jordle</h1>
             </div>
-            <!-- <div class="quantity-toggle"></div> -->
+            <div class="quantity-container">
+                <p>Choose the length of your word:</p>
+                <div class="quantity-toggle"></div>
+            </div>
             <div class="message-container"></div>
             <div class="tile-container"></div>
             <div class="key-container"></div>
